# ferrisboy

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml  crates.js  help.html  release-plz.toml  settings.html  src-files.js
.github/workflows/: audit.yml  benchmark.yml  dependencies.yml  documentation-generate.yml  format-check.yml  licenses-check.yml  lint-check.yml  lints.yml  nightly.yml  test.yml  test_coverage.yml  tests.yml  unused-dependencies-check.yml  unused_dependencies.yml  version-check.yml
benchmark-data/latest/emulator_new/base/: estimates.json  sample.json  tukey.json
benchmark-data/latest/emulator_new/new/: benchmark.json  estimates.json  sample.json  tukey.json
benchmark-data/latest/emulator_new/report/: index.html
benchmark-data/latest/report/: index.html
benchmark-history/emulator_new/base/: estimates.json  sample.json  tukey.json
benchmark-history/emulator_new/new/: estimates.json  sample.json  tukey.json
benchmark-history/emulator_new/report/: index.html
crates/fb-core/: CHANGELOG.md  Cargo.toml  README.md
crates/fb-core/benches/: criterion_benches.rs
crates/fb-core/src/: arguments.rs  context.rs  error.rs  lib.rs  prelude.rs
crates/fb-core/src/emulator/: config.rs  ferrisboy_emulator.rs  mod.rs
crates/fb-core/src/hardware/: address_bus.rs  cartridge.rs  cartridge_definitions.rs  cpu.rs  mod.rs  ppu.rs  timer.rs
crates/ferrisboy/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrisboy/src/: main.rs
crates/lib/: Cargo.toml
fb_core/: all.html  index.html
fb_core/emulator/config/: struct.Config.html
fb_core/emulator/ferrisboy_emulator/: struct.Emulator.html
fb_core/error/: enum.Error.html
fb_core/prelude/: enum.Error.html  index.html  sidebar-items.js  struct.Config.html  struct.Emulator.html
ferrisboy/: Cargo.toml  all.html  fn.main.html  index.html
ferrisboy/src/: main.rs
ferrisboy_core/: Cargo.toml
scripts/: benchmark.sh  dependencies.sh  documentation-generate.sh  format-check.sh  format_check.sh  functions.sh  git-pre-push.sh  hooks.sh  lint-check.sh  lint.sh  lint_check.sh  test.sh  version-check.sh
scripts/git/: pre-push.sh
search.index/: 09109c7bd342.js  0e57499cc1ab.js  root.js
search.index/crateNames/: c92c0bfdfff9.js
search.index/desc/: 0fd7011ea011.js
search.index/entry/: 13ae9fffbc75.js  9f1f75f1bb74.js
search.index/function/: 7b9aaf9283c3.js  95b04c6e0ed4.js
search.index/generic_inverted_index/: c582cd4224e1.js  d9d888b32657.js
search.index/name/: 46fa74b895b1.js  7f9317235198.js
search.index/normalizedName/: 0bcc911f4bc8.js  987fd5c918ec.js
search.index/path/: 2508963dfa8f.js  31a3594c2dc1.js
search.index/type/: d13b5bf4299d.js  fa7e240ba192.js
src/fb_core/: error.rs.html  lib.rs.html  prelude.rs.html
src/fb_core/emulator/: config.rs.html  ferrisboy_emulator.rs.html  mod.rs.html
src/ferrisboy/: main.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
