[workspace]
resolver = "2"
members = []

[workspace.package]
edition = "2024"
rust-version = "1.86.0"

categories = []
keywords = []
license-file = "LICENSE"
readme = "README.md"
repository = ""

[workspace.lints.rust]
warnings = "deny"

arithmetic_overflow = "deny" # Prevent operations that would cause integer overflow

[workspace.lints.clippy]
# Blanket foundation rules
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
panic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Style and clarity
wildcard_imports = "deny"
needless_borrow = "deny"
clone_on_ref_ptr = "deny"
redundant_clone = "deny"

# Performance
unnecessary_to_owned = "deny"
inefficient_to_string = "deny"
large_enum_variant = "deny"
map_clone = "deny"

# Arithmetic
checked_conversions = "deny"            # Suggest using checked conversions between numeric types
cast_possible_truncation = "deny"       # Detect when casting might truncate a value
cast_sign_loss = "deny"                 # Detect when casting might lose sign information
cast_possible_wrap = "deny"             # Detect when casting might cause value to wrap around
cast_precision_loss = "deny"            # Detect when casting might lose precision
integer_division = "deny"               # Highlight potential bugs from integer division truncation
arithmetic_side_effects = "deny"        # Detect arithmetic operations with potential side effects
unchecked_duration_subtraction = "deny" # Ensure duration subtraction won't cause underflow

# Unwraps
unwrap_used = "deny"       # Prevent using .unwrap() which can cause panics
expect_used = "deny"       # Prevent using .expect() which can cause panics
panicking_unwrap = "deny"  # Prevent unwrap on values known to cause panics
option_env_unwrap = "deny" # Prevent unwrapping environment variables which might be absent

# Array indexing
indexing_slicing = "deny" # Avoid direct array indexing and use safer methods like .get()

# Path handling
join_absolute_paths = "deny" # Prevent issues when joining paths with absolute paths

# Serialization issues
serde_api_misuse = "deny" # Prevent incorrect usage of Serde's serialization/deserialization API

# Unbounded input
uninit_vec = "deny" # Prevent creating uninitialized vectors which is unsafe

# Unsafe code detection
transmute_int_to_char = "deny"    # Prevent unsafe transmutation from integers to characters
transmute_int_to_float = "deny"   # Prevent unsafe transmutation from integers to floats
transmute_ptr_to_ref = "deny"     # Prevent unsafe transmutation from pointers to references
transmute_undefined_repr = "deny" # Detect transmutes with potentially undefined representations

# Allowed exceptions
multiple_crate_versions = "allow" # Can't control dependencies of dependencies

[workspace.dependencies]
