[package]
name = "ferrisboy"
description = "A CLI for the Ferris Boy Game Boy emulator."
version = "0.1.0"
edition = { workspace = true }

categories = { workspace = true }
keywords = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
ferrisboy_core = { workspace = true }
