[package]
name = "ferrisboy_core"
description = "Core library for the Ferris Boy Game Boy emulator."
version = "0.1.0"
edition = { workspace = true }

categories = { workspace = true }
keywords = { workspace = true }
license-file = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

num_enum = "0.7.3"
thiserror = "2.0.12"
