[package]
name = "fb-core"
version = "0.1.0"
description = "Core library for the Ferris Boy Game Boy emulator."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
criterion = { workspace = true }

# Benchmarks
[[bench]]
name = "criterion_benches"
harness = false
test = false

# Required for criterion in CI
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
