[package]
name = "fb-core"
version = "0.1.0"
description = "Core library for the Ferris Boy Game Boy emulator."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[lib]
# Necessary for criterion-compare-action in CI
# https://github.com/boa-dev/criterion-compare-action?tab=readme-ov-file#unrecognized-option-save-baseline
bench = false

# Benchmarks
[[bench]]
name = "criterion_benches"
bench = true               # Important for `cargo bench --benches` command
harness = false
test = false
