[package]
name = "fb-core"
version = "0.1.0"
description = "Core library for the Ferris Boy Game Boy emulator."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
criterion = { workspace = true }

# Benchmarks
[[bench]]
name = "criterion_benches" # Also in benchmark.sh and benchmark.yml
bench = true
harness = false
test = false
